# stockOrOptions

./: .env.production  .eslintrc  .gitignore  .prettierrc  README.md  alembic.ini  bin.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
api/get/: stats.py
config/: pgadmin.json
migrations/: env.py
migrations/versions/: f22df392c2e4_create_tables.py  fd5957998a9a_insert_data.py
public/: index.html  stockVOption.scss
resources/: AAPL_price_data.json  ACLS_price_data.json  ACN_price_data.json  ADBE_price_data.json  ADI_price_data.json  ADSK_price_data.json  AFRM_price_data.json  AKAM_price_data.json  ALGM_price_data.json  ALIT_price_data.json  ALTR_price_data.json  AMAT_price_data.json  AMBA_price_data.json  AMD_price_data.json  AMKR_price_data.json  ANET_price_data.json  ANSS_price_data.json  APH_price_data.json  APP_price_data.json  ARW_price_data.json  ASAN_price_data.json  ASGN_price_data.json  ASML_price_data.json  ASX_price_data.json  AVGO_price_data.json  AVT_price_data.json  AYX_price_data.json  AZPN_price_data.json  BDC_price_data.json  BILL_price_data.json  BKI_price_data.json  BLKB_price_data.json  BL_price_data.json  BMBL_price_data.json  BMI_price_data.json  BOX_price_data.json  BR_price_data.json  BSY_price_data.json  CACI_price_data.json  CAJ_price_data.json  (+213 more)
svo/api/: option_class.py  option_comparator.py
svo/config/: db.py  env.py  repos.py  services.py
svo/core/: models.py
svo/repos/: company.py  prices.py
svo/services/: comparator.py  models.py
ui/: axios.ts  index.tsx  routes.ts  theme.ts
(+33 files in other folders)
