[tool.poetry]
name = "stockOrOptions"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.11.0"
yfinance = "^0.2.3"
numpy = "^1.24.0"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
sqlalchemy = "^1.4.45"
alembic = "^1.9.1"
psycopg2 = "^2.9.5"
notebook = "^6.5.2"
yahooquery = "^2.2.15"
datetime = "^4.9"
eikon = "^1.1.16"
arch = "^5.3.1"



[tool.poetry.group.dev.dependencies]
pip-tools = "^6.12.1"
flake8 = "^6.0.0"
isort = "^5.11.4"
black = "^22.12.0"
autoflake = "^2.0.0"
mypy = "^0.991"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
